# Systems

./: .gitignore  AGENTS.md  CLAUDE.md  FRAMING.md  GEMINI.md  LICENSE  PROJECT_STATUS.md  README.md  articles.json  data-sources.md  dd001-conversion.html  dd001-risk.html  dd001.html  gallery.html  index.html  nano_banana.py  pyproject.toml  requirements-dev.txt  requirements.txt  research-framework.md
.claude/: settings.json
.claude/agents/: critic.md  fact-checker.md  notebook-qa.md  researcher.md  tzd-labs:swd-reviewer.md  writer.md
.claude/commands/: notebook-eval.md
.claude/plans/: notebook-review-pipeline.md
.github/scripts/: build.py
.github/workflows/: deploy-pages.yml
_file/: style.fd69dca2.css
_file/data/: capex.4decf7db.json  cloud_rev.8c5eb9ee.json  dd001_conversion_stats.0d8a611a.json  dd001_risk_stats.cf7caeb4.json  dd002_datacenters.10d0dc2d.json  dd002_eia.310bee52.json  dd002_queue.9b6340d6.json  dd002_simulation.64b6c844.json  dd002_stats.b01b7d1e.json  dd003_dc_locations.0a0a2aa2.json  dd003_employment.3e08916e.json  dd003_qcew_states.45c01750.json  dd003_stats.58478cea.json  dd003_wages.649126df.json  dd004_ferc_events.6f387ca8.json  dd004_iurc_cases.e8e8b827.json  dd004_locations.b0252f3a.json  dd004_pjm_demand.8aeff56c.json  dd004_stats.448342a5.json  deep_dives.128da137.json  deep_dives.528a4c5f.json  mktcap.ca3e32f2.json  stats.75d50547.json  stats.afa65a6b.json  us_states_topo.38067b87.json  virginia_counties_topo.03dde52b.json
_import/js/: animate.48305260.js  animate.7c32d49c.js  design.254ccef8.js  tooltip.1f3faffb.js  tooltip.40aee997.js  utils.2e630a24.js
_observablehq/: client.30a4a512.js  client.75c9a958.js  theme-air.d5b7fcbe.css
notebooks/: data_pipelines.py  energy_infrastructure_markets.py  energy_infrastructure_supply.py  integrated_analysis.py  reading_list.py  research_dashboard.py  research_tracker.py  shakes.mplstyle  source_tracker.py  telecom_validation.py
notebooks/dd001_capital_reality/: 01_capex_vs_reality.py  01_markets_and_money.py  02_conversion_reality.py  03_risk_and_durability.py  99_methods_and_sources.py
notebooks/dd001_learning_curves/: 01_investigation.py  02_feedback_architecture.py
notebooks/dd002_grid_modernization/: 01_whats_getting_built.py  02_who_benefits.py  03_feedback_architecture.py  99_methods_and_sources.py
notebooks/dd003_labor_markets/: 01_who_gets_hired.py  99_methods_and_sources.py
notebooks/dd004_utility_regulation/: 01_pe_utility_acquisitions.py  02_data_center_community_impact.py  03_cost_liability_map.py  PLAN_02_community_impact.md
observable/: .gitignore  CONVERSION_GUIDE.md  DD002_CONVERSION_PLAN.md  DD003_CONVERSION_PLAN.md  DD004_CONVERSION_PLAN.md  observablehq.config.js  package-lock.json  package.json
observable/src/: dd001-conversion.md  dd001-risk.md  dd001.md  dd002.md  dd003.md  dd004.md  gallery.md  index.md  style.css
research/: ai_valuation_vs_infrastructure_reality.md  coates_annotated_section_i.typ  dd001_nyt_prose_sections.md  dd001_open_questions_research.md  dd003_labor_impact_scoping.md  deep_dives.csv  historical_capex_cycles.md  mclean_annotated_is_enron_overpriced.typ  nyt_source_citations_update.csv  potter_learning_curves_synthesis.md  publications.csv  scroll_patterns.md
research/papers/: sequoia_600b_question.md  shaolei_ren_water.md  todd_moss_transformers.md
scripts/: deploy.sh  export_sqlite.py  generate_image.py  generate_tzdlabs_logo.py  review_callouts.mjs  review_charts.cjs  structured_ocr.py  sync_project_status.py  test_and_commit.sh  test_notebooks.sh
src/: __init__.py  altair_theme.py  notebook.py  plotting.py
src/bayesian/: __init__.py
src/data/: __init__.py  bls.py  census.py  cloud_capex.py  comtrade.py  db.py  edgar.py  events.py  finance.py  fred.py  pipelines.py  worldbank.py
src/dynamics/: __init__.py  grid_modernization.mdl  grid_modernization.py  (+2 more)
tests/: conftest.py  test_cloud_capex.py  test_db.py  test_notebook.py  test_plotting.py
(+148 files in other folders)
